src/test/deca/context/invalid/created/cast/boolean_float.deca
// Description :
//    test cast entre un boolean et float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.39) Cast impossible de <type1> vers <type2>

class A {}
{
(boolean)(0.5);
}
